--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/*reset*/
+*{
+    border: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
 .active{
     display: flex;
 }
