--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,16 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: #FAFAFA;
 }
 
 .active{
     display: flex;
 }
 
-header{
+/*Começo - Yves CSS*/
+
+#creation-quizz header{
     height: 69px;
     margin-bottom: 37px;
     background-color: #EC362D;
@@ -33,10 +36,8 @@ header{
     text-align: center;
     margin-bottom: 29px;
 }
-body{
-    background-color: #E5E5E5;
-}
-form{
+
+#creation-quizz form{
     background-color: #FFFFFF;
     box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.091);
     margin-bottom: 22px;
@@ -46,7 +47,7 @@ form{
     align-items: center;
     flex-direction: column;
 }
-form > input{
+#creation-quizz form > input{
     border: 1px solid #D1D1D1;
 
     margin-bottom: 9px;
@@ -93,3 +94,4 @@ form > input{
     font-size: 19px;
 }
 
+/*Fim - Yves CSS*/
