--- a/styles.css
+++ b/styles.css
@@ -454,6 +454,7 @@ header >h1{
     height: 181px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%), url(imagens/Simpsons.jpg);
     background-size: cover;
+    background-position: center;
     border-radius: 5px;
     display: flex;
     align-items: end;
