--- a/styles.css
+++ b/styles.css
@@ -315,11 +315,12 @@ header >h1{
 .screen-list-quizzes{
     display: none;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .screen-list-quizzes header,
 .info-quizz header{
-    width: 100%;
+    width: 100vw;
     height: 69px;
     display: flex;
     justify-content: center;
@@ -331,7 +332,8 @@ header >h1{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.screen-list-quizzes header>h1{
+.screen-list-quizzes header>h1,
+.info-quizz header>h1{
     width: 176px;
     height: 43px;
     font-weight: 700;
@@ -430,8 +432,6 @@ header >h1{
 }
 
 .area-all-quizzes>p{
-    width: 158px;
-    height: 23px;
     margin-bottom: 12px;
     font-weight: 700;
     font-size: 20px;
@@ -452,7 +452,7 @@ header >h1{
 .card-quizz{
     width: 340px;
     height: 181px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%), url(imagens/Simpsons.jpg);
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%), url(imagens/BuzzFeed-Logo.jpeg);
     background-size: cover;
     background-position: center;
     border-radius: 5px;
@@ -477,7 +477,6 @@ header >h1{
     color: #FFFFFF;
     margin-left: 18px;
 }
-
 
 .info-quizz{
     display: none;
@@ -567,7 +566,7 @@ header >h1{
     /*Começo - Barci CSS*/
 
     .screen-list-quizzes main{
-        max-width: 340px;
+        width: 340px;
     }
 
     .area-my-quizzes{
