Adicionada a funcionalidade de criar quizzes

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     background-color: #FAFAFA;
 }
 
-/*Começo - Fernando CSS*/
+/*Começo - CSS TELA 2*/
 .screen-quizz{
     display:none;
     flex-direction: column;
@@ -197,142 +197,227 @@ body{
     overflow-wrap: break-word;
     hyphens: auto;
 }
-/*Fim - Fernando CSS*/
+/*Fim - CSS TELA 2*/
 
-/*Começo - Yves CSS*/
+/*Começo - CSS TELAS 3.1-3.2-3.3-3.4*/
 
-#creation-quizz{
-    display:none
+.creation-quizz, 
+.quizzlvl,
+.done-quizz{
+    display: none;
+    justify-content: center;
 }
 
-#creation-quizz > header, #quizzlvl > header, #done-quizz > header{
+
+.creation-quizz header,
+.quizzlvl header,
+.done-quizz header{
+    width: 100vw;
     height: 69px;
-    margin-bottom: 37px;
-    background-color: #EC362D;
-
     display: flex;
-    align-items: center;
     justify-content: center;
-
-    box-shadow: 1px 5px 8px rgba(0, 0, 0, 0.212);
+    align-items: center;
+    background-color: #EC362D;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-header >h1{
+
+.creation-quizz header>h1,
+.quizzlvl header>h1,
+.done-quizz header>h1{
+    width: 176px;
+    height: 43px;
+    font-weight: 700;
+    font-size: 37px;
+    line-height: 43px;
     color: #FFFFFF;
 }
 
-#creation-quizz > h4, #quizzlvl > h4, #done-quizz > h4{
-    text-align: center;
-    margin-bottom: 29px;
-}
-
-#creation-quizz form, #quizzlvl > form{
-    background-color: #FFFFFF;
-    box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.091);
-    margin-bottom: 22px;
-
+.area-question,
+.area-level,
+.area-done{
+    width: 600px;
+    margin-top: 69px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+}
+
+.area-question>p,
+.area-level>p,
+.area-done>p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 23px;
+    line-height: 27px;
+    display: flex;
     align-items: center;
-    flex-direction: column;
+    color: #000000;
+    margin-top: 63px;
 }
-#creation-quizz form > input, #quizzlvl > form > input{
-    border: 1px solid #D1D1D1;
 
-    margin-bottom: 9px;
-    padding-left: 7px;
-    height: 46px;
-    width: calc(100% - 16px);
-
-    color: black;
-     
-    text-align: left;
-    font-style: italic;
-    font-size: 19px;
-
-    border-radius: 5px;
+.question,
+.level{
+    width: 600px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+    margin-top: 35px;
 }
+
 .title-form{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    width: calc(100% - 20px);
-    height: 74px;
-}
-#open-icon{
-    height: 20px;
-    width: 26px;
-}
-#btn-container{
+    margin-top: 27px;
     width: 100%;
-    margin: 40px 0px;
+    display: flex;
+    justify-content: space-between;
+}
 
+.question p,
+.level p{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    color: #000000;
+    margin-left: 17px;
 }
-#finish-btn{
-    background-color: #EC362D;
-    color: #FFFFFF;
 
-    height: 54px;
-    width: 354px;
-    border-radius: 15px;
+.question ion-icon,
+.level ion-icon{
+    width: 26px;
+    height: 22px;
+    margin-right: 24px;
+}
 
+.question input,
+.level input{
+    width: calc(100% - 36px);
+    height: 46px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    margin-left: 16px;
+    margin-top: 14px;
+    padding-left: 23px;
     font-size: 19px;
 }
 
-.text-box{
-    border-radius: 5px;
-    border: 1px solid #D1D1D1;
-    width: calc(100% - 18px);
-    margin-bottom: 30px;
-
-    font-size: large;
-    font-family: 'Roboto', sans-serif;
+.question input::placeholder,
+.level input::placeholder{
     font-style: italic;
-}
-#background-container{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 22px;
+    color: #BABABA;
 }
 
-#background{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 181px;
-    width: 340px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.57), rgba(0, 0, 0, 0.57)), url("./imagens/backgroundimg-done.jpg");
-    background-size: cover;
+.level textarea{
+    width: calc(100% - 36px);
+    height: 177px;
+    border: 1px solid #D1D1D1;
     border-radius: 5px;
+    margin-top: 14px;
+    margin-bottom: 24px;
+    margin-left: 16px;
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 19px;
+    padding-top: 13px;
+    padding-left: 23px;
+}
 
+.level textarea::placeholder{
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 22px;
+    color: #BABABA;
 }
-#quizz-done-img{
-    width: calc(100% - 20px);
+
+.question>p{
+    margin-top: 27px;
 }
-#btn-container{
+
+.question input:nth-of-type(7),
+.question input:nth-of-type(9){
+    margin-top: 32px;
+}
+
+.question input:nth-last-child(1){
+    margin-bottom: 27px;
+}
+
+.area-question .question:nth-last-of-type(1),
+.area-level .level:nth-last-of-type(1){
+    margin-bottom: 70px;
+}
+
+.area-question button,
+.area-level button{
+    width: 340px;
+    height: 54px;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 25px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: #FFF5F4;
+    background-color: #EC362D;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
 }
-.btn{
+
+.area-done button{
     width: 220px;
     height: 44px;
-    margin: 4px 0px;
-
-    background: #EC362D;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 25px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFF5F4;
+    background-color: #EC362D;
     border-radius: 15px;
-    color: #FFF5F4  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 9px;
 }
-#cancel-quizzbtn{
-    background-color: transparent;
-    color: #818181;
-}
-/*Fim - Yves CSS*/
 
-/*Começo - Barci CSS*/
+.area-done button:nth-of-type(2){
+    color: #818181;
+    background-color: rgba(1, 1, 1, 0);
+    border: none;
+    margin-bottom: 50px;
+}
+
+.image-quizz{
+    width: 100%;
+    height: 266px;
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%), url(imagens/BuzzFeed-Logo.jpeg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+    display: flex;
+    align-items: end;
+    margin: 46px 0px;
+}
+
+/*Fim - CSS TELAS 3.1-3.2-3.3-3.4*/
+
+
+
+/*Começo - CSS TELA 1*/
 
 .screen-list-quizzes{
     display: none;
@@ -493,12 +578,20 @@ header >h1{
     align-items: center;
 }
 
-.options-quizzes img:nth-of-type(1){
+.options-quizzes>div{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.options-quizzes div:nth-of-type(1)>img{
     width: 18.11px;
     height: 18px;
 }
 
-.options-quizzes img:nth-of-type(2){
+.options-quizzes div:nth-of-type(2)>img{
     width: 19px;
     height: 21.92px;
 }
@@ -520,7 +613,8 @@ header >h1{
     margin-right: 0px
 }
 
-.card-quizz h2{
+.card-quizz h2,
+.image-quizz h2{
     width: 301px;
     height: 54px;
     font-weight: 400;
@@ -641,13 +735,11 @@ header >h1{
 }
 
 .active{
-    display:block;
+    display:flex;
 }
-/*Fim - Barci CSS*/
+/*Fim - CSS TELA 1*/
 
 @media (max-width: 1100px) {
-
-    /*Começo - Barci CSS*/
 
     .screen-list-quizzes main{
         width: 340px;
@@ -676,9 +768,6 @@ header >h1{
         margin-bottom: 35px;
     }
 
-    /*Fim - Barci CSS*/
-
-    /*Começo - Fernando CSS*/
     .title-quizz h2{
         min-width:375px;
         width:100%;
@@ -752,11 +841,15 @@ header >h1{
         gap: 8px;
         min-width:375px;
     }    
-    /*Fim - Fernando CSS*/
 }
 
 @media (max-width: 600px) {
-    .info-quizz main{
+    .info-quizz main,
+    .area-question,
+    .question,
+    .area-level,
+    .level,
+    .area-done{
         width: 100%;
     }
 }
@@ -771,7 +864,9 @@ header >h1{
         margin-right: 0px;
     }
 
-    .form-info button{
+    .form-info button,
+    .area-question button,
+    .area-level button{
         width: 100%;
     }
 }
