--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-#creation-quizz{
-    display:none
-}
 /*reset*/
 *{
     border: none;
@@ -46,7 +43,7 @@ body{
     overflow: hidden;
     text-align: center;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.57), rgba(0, 0, 0, 0.57));
-    background-size: cover;
+    background-size: cover;  
     display:flex;
     justify-content: center;
     align-items: center;
@@ -96,6 +93,7 @@ body{
 .answers img{
     width:329.91px;
     height:175.2px;
+    object-fit: cover;
     background-image: url(imagens/BuzzFeed-Logo.jpeg);
     background-size: cover;
     background-position: center;
@@ -579,7 +577,7 @@ header >h1{
 }
 
 .active{
-    display:block;
+    display:flex;
 }
 /*Fim - Barci CSS*/
 
